--- a/pages/about.html
+++ b/pages/about.html
@@ -15,14 +15,14 @@
                     <h5>
                         <a href="home.html">Home</a>
                         <a href="projects.html">Projects</a>
-                        <a href="about.html">Contact</a>
+                        <a href="contact.html">Contact</a>
                         <a href="about.html">About</a>
                     </h5>
                 </nav>
             </header>
             <article>
                 <section>
-                    <p></p>
+                    <p><!--Describe yourself.--></p>
                     <aside>
                         <figure>
                             <img src="" alt="If you're seeing this, the image failed to load.">
