--- a/pages/home.html
+++ b/pages/home.html
@@ -15,22 +15,21 @@
                     <h5>
                         <a href="home.html">Home</a>
                         <a href="projects.html">Projects</a>
-                        <a href="about.html">Contact</a>
+                        <a href="contact.html">Contact</a>
                         <a href="about.html">About</a>
                     </h5>
                 </nav>
             </header>
             <article>
+                <img id="comic_strip" src="../images/comic-strip.png" alt="If you're seeing this, the image failed to load.">
                 <section>
-                    <!--A quote I live by-->
+                    <h3>A Fine Quote</h3>
+                    <h5>"I don't care that they stole my idea...I care that they don't have any of their own."</h5>
+                    <h5>- Nikola Tesla </h5> 
                 </section>
-                <seciton>
-                    <h3>What I Live For</h3>
-                    <!--My call to action-->
-                </seciton>
                 <section>
-                    <h3>Website Guide</h3>
-                    <!--Website navigation guide-->
+                    <h3>Welcome All!</h3>
+                    <p></p>
                 </section>
             </article>
             <footer>
