--- a/pages/contact.html
+++ b/pages/contact.html
@@ -15,7 +15,7 @@
                     <h5>
                         <a href="home.html">Home</a>
                         <a href="projects.html">Projects</a>
-                        <a href="about.html">Contact</a>
+                        <a href="contact.html">Contact</a>
                         <a href="about.html">About</a>
                     </h5>
                 </nav>
