Add introduction to home.html

--- a/pages/home.html
+++ b/pages/home.html
@@ -28,8 +28,13 @@
                     <h5>- Nikola Tesla </h5> 
                 </section>
                 <section>
-                    <h3>Welcome All!</h3>
-                    <p></p>
+                    <h3>Greetings all!</h3>
+                    <p>I am an IT enthusiast who is seeking to expand my professional experience. 
+                        What you’re looking at is my portfolio website, which showcases my projects, skills, education, and objectives. 
+                        You can also find me on GitHub, LinkedIn, and Quora. 
+                        I know this page is somewhat sparse but I couldn't think of anything else to add.  
+                        Feel free to make any suggestions through the contact page.</p>
+                    <p>Thanks!</p> 
                 </section>
             </article>
             <footer>
