Upload portrait image of author

--- a/pages/about.html
+++ b/pages/about.html
@@ -25,7 +25,7 @@
                     <p><!--Describe yourself.--></p>
                     <aside>
                         <figure>
-                            <img src="" alt="If you're seeing this, the image failed to load.">
+                            <img src="../images/portrait.png" alt="If you're seeing this, the image failed to load.">
                             <figcaption></figcaption>
                         </figure>
                     </aside>
