--- a/pages/contact.html
+++ b/pages/contact.html
@@ -22,9 +22,53 @@
             </header>
             <article>
                 <section>
-                    <p><!--Instructions and guidelines on contacting me.--></p>
+                    <p>Comments, inquiries, or suggestions? Use the following form to submit them to me. 
+                        Upon hitting submit, your default email client should open with a prepared email.</p>
                 </section>
                 <form id="form" action="mailto:arvin.ziba@ontariotechu.net" method="post" enctype="text/plain" name="form">
+                    <div id="first-name-div">
+                        <label for="first-name">First Name</label>
+                        <br>
+                        <input type="text" name="first-name" size="32" placeholder="First Name">
+                    </div>
+                    
+                    <div id="surname-div">
+                        <label id="surname">Surname</label>
+                        <br>
+                        <input type="text" name="surname" size="32" placeholder="Surname">
+                    </div>
+
+                    <div id="email-div"></div>
+                        <label id="surname">Email</label>
+                        <br>
+                        <input type="email" name="email" size="48" placeholder="Email" required>
+                    </div>
+
+                    <div id="comments-div">
+                        <label for="comments">Comments</label>
+                        <br>
+                        <textarea name="comments" cols="60" rows="5" maxlength="300" placeholder="Questions, Inquiries, Suggestions etc." required></textarea>
+                    </div>
+                    
+                    <div id="how-find-me-div">
+                        <label for="how-find-me">How did you find this website?</label> 
+                        <select name="how-find-me" required>
+                            <option value="Search Engine">Search engine</option>
+                            <option value="Word of mouth">Word of mouth</option>
+                            <option value="LinkedIn">LinkedIn</option>
+                            <option value="Indeed.com">Indeed</option>
+                            <option value="GitHub">GitHub</option>
+                            <option value="Other">Other</option>
+                        </select>
+                    </div>
+                    <br>
+                    <div id="specify-div">
+                        <label for="specify">If you selected "Other", please specify how.</label>
+                        <input type="text" name="specify" size="32">
+                    </div>
+                    <br>
+                    <input type="submit" value="Submit">
+                    <input type="reset" value="Reset">
                 </form>
             </article>
             <footer>
