Add project descriptions to projects.html

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -26,33 +26,33 @@
                         Upon hitting submit, your default email client should open with a prepared email.</p>
                 </section>
                 <form id="form" action="mailto:arvin.ziba@ontariotechu.net" method="post" enctype="text/plain" name="form">
-                    <div id="first-name-div">
-                        <label for="first-name">First Name</label>
+                    <div id="first_name_div">
+                        <label for="first_name">First Name</label>
                         <br>
-                        <input type="text" name="first-name" size="32" placeholder="First Name">
+                        <input type="text" name="first_name" size="32" placeholder="First Name">
                     </div>
                     
-                    <div id="surname-div">
+                    <div id="surname_div">
                         <label id="surname">Surname</label>
                         <br>
                         <input type="text" name="surname" size="32" placeholder="Surname">
                     </div>
 
-                    <div id="email-div"></div>
+                    <div id="email_div"></div>
                         <label id="surname">Email</label>
                         <br>
                         <input type="email" name="email" size="48" placeholder="Email" required>
                     </div>
 
-                    <div id="comments-div">
+                    <div id="comments_div">
                         <label for="comments">Comments</label>
                         <br>
                         <textarea name="comments" cols="60" rows="5" maxlength="300" placeholder="Questions, Inquiries, Suggestions etc." required></textarea>
                     </div>
-                    
-                    <div id="how-find-me-div">
-                        <label for="how-find-me">How did you find this website?</label> 
-                        <select name="how-find-me" required>
+
+                    <div id="how_find_me_div">
+                        <label for="how_find_me">How did you find this website?</label> 
+                        <select name="how_find_me" required>
                             <option value="Search Engine">Search engine</option>
                             <option value="Word of mouth">Word of mouth</option>
                             <option value="LinkedIn">LinkedIn</option>
@@ -62,7 +62,7 @@
                         </select>
                     </div>
                     <br>
-                    <div id="specify-div">
+                    <div id="specify_div">
                         <label for="specify">If you selected "Other", please specify how.</label>
                         <input type="text" name="specify" size="32">
                     </div>
