Add written section to about.html

--- a/pages/about.html
+++ b/pages/about.html
@@ -21,15 +21,38 @@
                 </nav>
             </header>
             <article>
-                <section>
-                    <p><!--Describe yourself.--></p>
-                    <aside>
-                        <figure>
-                            <img src="../images/portrait.png" alt="If you're seeing this, the image failed to load.">
-                            <figcaption></figcaption>
-                        </figure>
-                    </aside>
-                </section>
+                <p>Hey hey!
+                    My name is Arvin Ziba. 
+                    I am a second-year student at Ontario Tech University, majoring in networking and IT security. 
+                    From my studies there, I gained a solid grasp in most of the content covered in CCNA plus about 85 hours of practical experience, through our state-of-the-art networking lab. 
+                    I also have a plenty of experience in programming in Python, C++, and JavaScript (more so in Python) from my courses in programming concepts in Python, data structures and algorithms, web and script programming, and statistics. 
+                    If you are interested in the details of my qualifications, I prepared a list of my successfully completed courses and a link to their description at Ontario Tech’s website. 
+                    I also encourage you check out my “Projects” page for more insight into my professional experience. 
+                    My hobbies include Dungeons and Dragons, other board games, video games, and hacking. 
+                    Hacking is a big one. 
+                    I have a passion for experimenting with networks and seek ways to breach their security (legally, of course). 
+                    This is something I do on my home lab hope to turn this into a career in cybersecurity.
+                    Anyways, that’s a little about myself. Thanks for reading. 
+                    </p>
+                <aside>
+                    <figure>
+                        <img src="../images/portrait.png" alt="If you're seeing this, the image failed to load.">
+                        <figcaption></figcaption>
+                    </figure>
+                </aside>
+                <h3>Completed University Courses</h3>
+                <ul>
+                    <li><a href>Intro to Networking I</a></li>
+                    <li><a href>Intro to Networking II</a></li>
+                    <li><a href>Advanced Networking I</a></li>
+                    <li><a href>Web and Script Programming</a></li>
+                    <li><a href>Intro to Programming for IT</a></li>
+                    <li><a href>Obj Oriented Programming for IT</a></li>
+                    <li><a href>Intro to Computer Security</a></li>
+                    <li><a href>Management of the Enterprise</a></li>
+                    <li><a href>Computer Architecture</a></li>
+                    <li><a href>Statistics for IT</a></li>
+                </ul>
                 <div id="video_container">
                     <video id="short-video" width="" height="" controls poster="" 
                     preload="auto" muted loop>
