--- a/pages/projects.html
+++ b/pages/projects.html
@@ -26,7 +26,7 @@
                         <h3>Home Networking Lab</h3>
                         <p>My most thrilling project yet is my networking lab. 
                             This is where I do most of the lab work in studying for my Cisco certifications or networking courses. 
-                            I also use it as a dummy for testing my network attacks. 
+                            I also use it as a dummy network for testing my network attacks. 
                             More hardware is soon to be deployed, and this section will be updated accordingly.  
                         </p> 
                     </div>
@@ -51,12 +51,11 @@
                         <h3>Applications and Services</h3>
                         <div id="p1_applications_desc">
                             <p>I try to replicate actual production environments by configuring multiple services at once. 
-                                Here are the contents of my best working configuration file.</p>
+                                Here are some of the contents of my best working configuration file.</p>
                         </div>
                         <ul>
                             <li>Access control lists</li>
                             <li>Authentication, authorization, and accounting (AAA) with RADIUS</li>
-                            <li>DHCP</li>
                             <li>DHCP snooping</li>
                             <li>DNS name resolution</li>
                             <li>Dynamic ARP inspection</li>
@@ -84,7 +83,7 @@
                 </seciton>
 
                 <section>
-                    <h3>Dijkstra's Shortest Path First Algorithm</h3>
+                    <h3>Least-Cost Path Finder</h3>
                     <div id="p2_desc">
                         <p>A Python script that applies Dijkstra’s Shortest Path First algorithm to a CSV file representation of a graph. 
                             Each node in the graph represents a destination, and each edge represents a path.
@@ -97,7 +96,7 @@
                     </figure>
                     <figure id="p3_data">
                         <img src="../images/p3-data.png">
-                        <figcaption>The graph represented and read in CSV form.</figcaption>
+                        <figcaption>The graph data structure.</figcaption>
                     </figure>
                 </section>
             </article>
