Add course links to about.html

--- a/pages/about.html
+++ b/pages/about.html
@@ -42,16 +42,16 @@
                 </aside>
                 <h3>Completed University Courses</h3>
                 <ul>
-                    <li><a href>Intro to Networking I</a></li>
-                    <li><a href>Intro to Networking II</a></li>
-                    <li><a href>Advanced Networking I</a></li>
-                    <li><a href>Web and Script Programming</a></li>
-                    <li><a href>Intro to Programming for IT</a></li>
-                    <li><a href>Obj Oriented Programming for IT</a></li>
-                    <li><a href>Intro to Computer Security</a></li>
-                    <li><a href>Management of the Enterprise</a></li>
-                    <li><a href>Computer Architecture</a></li>
-                    <li><a href>Statistics for IT</a></li>
+                    <li><a href="https://calendar.ontariotechu.ca/preview_course.php?catoid=34&coid=51673&print">Intro to Networking I</a></li>
+                    <li><a href="https://calendar.ontariotechu.ca/preview_course.php?catoid=34&coid=51674&print">Intro to Networking II</a></li>
+                    <li><a href="https://calendar.ontariotechu.ca/preview_course.php?catoid=34&coid=51685&print">Advanced Networking I</a></li>
+                    <li><a href="https://calendar.ontariotechu.ca/preview_course.php?catoid=34&coid=51693&print">Web and Script Programming</a></li>
+                    <li><a href="https://calendar.ontariotechu.ca/preview_course.php?catoid=34&coid=61353&print">Intro to Programming for IT</a></li>
+                    <li><a href="https://calendar.ontariotechu.ca/preview_course.php?catoid=34&coid=61354&print">Object Oriented Programming for IT</a></li>
+                    <li><a href="https://calendar.ontariotechu.ca/preview_course.php?catoid=34&coid=51688&print">Intro to Computer Security</a></li>
+                    <li><a href="https://calendar.ontariotechu.ca/preview_course.php?catoid=34&coid=51103&print">Management of the Enterprise</a></li>
+                    <li><a href="https://calendar.ontariotechu.ca/preview_course.php?catoid=34&coid=51689&print">Computer Architecture</a></li>
+                    <li><a href="https://calendar.ontariotechu.ca/preview_course.php?catoid=34&coid=52212&print">Statistics for IT</a></li>
                 </ul>
                 <div id="video_container">
                     <video id="short-video" width="" height="" controls poster="" 
