Write CSS for header and constituent elements

--- a/pages/about.html
+++ b/pages/about.html
@@ -5,23 +5,31 @@
     <head>
         <meta charset='utf-8'> 
         <meta name="viewport" content="width=device-width">
-        <link href="full.css" rel="stylesheet" type="text/css" media="only screen and (min-width:960px)">
-        <link href="tablet.css" rel="stylesheet" type="text/css" media="only screen and (min-width:481px) and (max-width:960px)">
-        <link href="phone.css" rel="stylesheet" type="text/css" media="only screen and (max-width:480px)">
+        <link href="../stylesheets/full.css" rel="stylesheet" type="text/css" media="only screen and (min-width:960px)">
+        <link href="../stylesheets/tablet.css" rel="stylesheet" type="text/css" media="only screen and (min-width:481px) and (max-width:960px)">
+        <link href="../stylesheets/mobile.css" rel="stylesheet" type="text/css" media="only screen and (max-width:480px)">
         <title>About</title>
     </head>
 
     <body>
         <div id="wrapper">
             <header>
-                <h1>Arvin Ziba</h1>
-                <nav>
-                    <h5>
+                <div id="banner">
+                    <h1>ARVIN ZIBA</h1>
+                </div>
+                <nav id="navigation_menu">
+                    <div class="navigation_button">
                         <a href="home.html">Home</a>
+                    </div>
+                    <div class="navigation_button">
                         <a href="projects.html">Projects</a>
+                    </div>
+                    <div class="navigation_button">
                         <a href="contact.html">Contact</a>
+                    </div>
+                    <div class="navigation_button">
                         <a href="about.html">About</a>
-                    </h5>
+                    </div>
                 </nav>
             </header>
             <article>
