Write CSS for home.html article

--- a/pages/home.html
+++ b/pages/home.html
@@ -34,20 +34,25 @@
             </header>
             <br>
             <article>
-                <img id="comic_strip" src="../images/comic-strip.png" alt="If you're seeing this, the image failed to load.">
+                <div id="comic_strip_container">
+                    <img src="../images/comic-strip.png" alt="If you're seeing this, the image failed to load.">
+                </div>
                 <section>
-                    <h3>A Fine Quote</h3>
-                    <h5>"I don't care that they stole my idea...I care that they don't have any of their own."</h5>
-                    <h5>- Nikola Tesla </h5> 
+                    <div id="fine_quote">
+                        <p>"I don't care that they stole my idea...I care that they don't have any of their own."</p>
+                        <p>- Nikola Tesla </p> 
+                    </div>
                 </section>
                 <section>
-                    <h3>Greetings all!</h3>
-                    <p>I am an IT enthusiast who is seeking to expand my professional experience. 
-                        What you’re looking at is my portfolio website, which showcases my projects, skills, education, and objectives. 
-                        You can also find me on GitHub, LinkedIn, and Quora. 
-                        I know this page is somewhat sparse but I couldn't think of anything else to add.  
-                        Feel free to make any suggestions through the contact page.</p>
-                    <p>Thanks!</p> 
+                    <div id="introduction">
+                        <h3>Greetings all!</h3>
+                        <p>I am an IT enthusiast who is seeking to expand my professional experience. 
+                            What you’re looking at is my portfolio website, which showcases my projects, skills, education, and objectives. 
+                            You can also find me on GitHub, LinkedIn, and Quora. 
+                            I know this page is somewhat sparse but I couldn't think of anything else to add.  
+                            Feel free to make any suggestions through the contact page.</p>
+                        <p>Thanks!</p> 
+                    </div>
                 </section>
             </article>
             <footer>
