--- a/pages/home.html
+++ b/pages/home.html
@@ -48,7 +48,7 @@
                         <h3>Greetings all!</h3>
                         <p>I am an IT enthusiast who is seeking to expand my professional experience. 
                             What you’re looking at is my portfolio website, which showcases my projects, skills, education, and objectives. 
-                            You can also find me on GitHub, LinkedIn, and Quora. 
+                            You can also find me on GitHub and LinkedIn. 
                             I know this page is somewhat sparse but I couldn't think of anything else to add.  
                             Feel free to make any suggestions through the contact page.</p>
                         <p>Thanks!</p> 
@@ -58,6 +58,9 @@
             <footer>
                 <address>
                     <p>Contact me at <a href="mailto:arvin.ziba@ontariotechu.net">arvin.ziba@ontariotechu.net</a></p>
+                    <a href="https://www.linkedin.com/in/arvin-ziba-51493424b/">LinkedIn</a>
+                    <br><br>
+                    <a href="https://github.com/ArvinoBoro">GitHub</a>
                 </address>
                 <p>&copy; Arvin Ziba 2024 </p>
             </footer>
