Write image and text containers CSS for project 1

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -34,47 +34,46 @@
             </header>
             <article>
                 <section>
-                    <div id="p1_desc">
+                    <div id="p1_heading">
                         <h3>Home Networking Lab</h3>
-                        <p>My most thrilling project yet is my networking lab. 
-                            This is where I do most of the lab work in studying for my Cisco certifications or networking courses. 
-                            I also use it as a dummy network for testing my network attacks. 
-                            More hardware is soon to be deployed, and this section will be updated accordingly.  
-                        </p> 
                     </div>
-                    
-                    <figure id="networking_lab">
-                        <img src="../images/networking-lab.png">
-                    </figure>
-                    
-                    <div id="p1_hardware">
-                        <h3>Hardware</h3>
-                            <ul>
-                                <li>Cisco 1811 Integrated Services Router</li>
-                                <li>Cisco Meraki MS220 switch</li>
-                                <li>Cisco Catalyst 3560v2 multilayer switch</li>
-                                <li>Cisco Catalyst 3750 multilayer switch</li>
-                                <li>Cisco IP Phone 7945</li>
-                                <li>Mac Mini running VyOS Linux </li>
-                            </ul>
+                    <div id="p1_desc_image">
+                        <div id="p1_desc">
+                            <p>My most thrilling project yet is my networking lab. 
+                                This is where I do most of the lab work for my Cisco certifications and networking courses. 
+                                I also use it as a dummy network for testing my network attacks. 
+                                More hardware will be deployed, and this section will be updated accordingly.</p> 
+                        </div>
+                        <div id="networking_lab_image"></div>
                     </div>
-                    <div id="p1_applications">
-                        <h3>Applications and Services</h3>
-                        <div id="p1_applications_desc">
+                    <div id="p1_hardware_applications">
+                        <div id="p1_hardware">
+                            <h3>Hardware</h3>
+                                <ul>
+                                    <li>Cisco 1811 Integrated Services Router</li>
+                                    <li>Cisco Meraki MS220 switch</li>
+                                    <li>Cisco Catalyst 3560 v2 series multilayer switch</li>
+                                    <li>Cisco Catalyst 3750 multilayer switch</li>
+                                    <li>Cisco IP Phone 7945</li>
+                                    <li>Mac Mini running VyOS Linux </li>
+                                </ul>
+                        </div>
+                        <div id="p1_applications">
+                            <h3>Applications and Services</h3>
                             <p>I try to replicate actual production environments by configuring multiple services at once. 
                                 Here are some of the contents of my best working configuration file.</p>
+                            <ul>
+                                <li>Access control lists</li>
+                                <li>Authentication, authorization, and accounting (AAA) with RADIUS</li>
+                                <li>DHCP snooping</li>
+                                <li>DNS name resolution</li>
+                                <li>Dynamic ARP inspection</li>
+                                <li>Hot-standby routing</li>
+                                <li>In-band management through SSH</li>
+                                <li>Network address translation</li>
+                                <li>Syslog messaging to a centralized server</li>
+                            </ul>
                         </div>
-                        <ul>
-                            <li>Access control lists</li>
-                            <li>Authentication, authorization, and accounting (AAA) with RADIUS</li>
-                            <li>DHCP snooping</li>
-                            <li>DNS name resolution</li>
-                            <li>Dynamic ARP inspection</li>
-                            <li>Hot-standby routing</li>
-                            <li>In-band management through SSH</li>
-                            <li>Network address translation</li>
-                            <li>Syslog messaging to a centralized server</li>
-                        </ul>
                     </div>
                 </section>
                 <seciton>
@@ -114,6 +113,9 @@
             <footer>
                 <address>
                     <p>Contact me at <a href="mailto:arvin.ziba@ontariotechu.net">arvin.ziba@ontariotechu.net</a></p>
+                    <a href="https://www.linkedin.com/in/arvin-ziba-51493424b/">LinkedIn</a>
+                    <br><br>
+                    <a href="https://github.com/ArvinoBoro">GitHub</a>
                 </address>
                 <p>&copy; Arvin Ziba 2024 </p>
             </footer>
