--- a/pages/about.html
+++ b/pages/about.html
@@ -76,6 +76,9 @@
             <footer>
                 <address>
                     <p>Contact me at <a href="mailto:arvin.ziba@ontariotechu.net">arvin.ziba@ontariotechu.net</a></p>
+                    <a href="https://www.linkedin.com/in/arvin-ziba-51493424b/">LinkedIn</a>
+                    <br><br>
+                    <a href="https://github.com/ArvinoBoro">GitHub</a>
                 </address>
                 <p>&copy; Arvin Ziba 2024 </p>
             </footer>
