--- a/pages/contact.html
+++ b/pages/contact.html
@@ -35,7 +35,7 @@
             <article>
                 <section>
                     <p>Comments, inquiries, or suggestions? Use the following form to submit them to me. 
-                        Upon hitting submit, your default email client should open with a prepared email.</p>
+                        On submit, your default email client should open with a prepared email.</p>
                 </section>
                 <form id="form" action="mailto:arvin.ziba@ontariotechu.net" method="post" enctype="text/plain" name="form">
                     <div id="first_name_div">
@@ -86,6 +86,9 @@
             <footer>
                 <address>
                     <p>Contact me at <a href="mailto:arvin.ziba@ontariotechu.net">arvin.ziba@ontariotechu.net</a></p>
+                    <a href="https://www.linkedin.com/in/arvin-ziba-51493424b/">LinkedIn</a>
+                    <br><br>
+                    <a href="https://github.com/ArvinoBoro">GitHub</a>
                 </address>
                 <p>&copy; Arvin Ziba 2024 </p>
             </footer>
