Write CSS image and text containers CSS for projects 2 and 3

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -34,7 +34,7 @@
             </header>
             <article>
                 <section>
-                    <div id="p1_heading">
+                    <div class="project_heading">
                         <h3>Home Networking Lab</h3>
                     </div>
                     <div id="p1_desc_image">
@@ -77,36 +77,33 @@
                     </div>
                 </section>
                 <seciton>
-                    <h3>CSV-Data Management Application</h3>
+                    <div class="project_heading">
+                        <h3>CSV-Data Management Application</h3>
+                    </div>
                     <div id="p2_desc">
-                        <p>A Python script that performs the functions shown in the interface image. 
+                        <p>A Python script that performs the functions listed in the user-interface snapshot (left) on the data snippet (right). 
                             Modules from the standard library or third-party libraries do not contribute to the algorithm’s functionality. </p>
                     </div>
-                    <figure id="p2_interface"> 
-                        <img src="../images/p2-interface.png">
-                        <figcaption>The user interface for performing the listed operations.</figcaption>
-                    </figure>
-                    <figure id="p2_data">
-                        <img src="../images/p2-data.png">
-                        <figcaption>Sample CSV product data for reading and writing.</figcaption>
+                    <figure class="image_container"> 
+                        <img src="../images/csv-data-manager.png">
                     </figure>
                 </seciton>
 
                 <section>
-                    <h3>Least-Cost Path Finder</h3>
-                    <div id="p2_desc">
+                    <div class="project_heading">
+                        <h3>Least-Cost Path Finder</h3>
+                    </div>
+                    <div id="p3_desc">
                         <p>A Python script that applies Dijkstra’s Shortest Path First algorithm to a CSV file representation of a graph. 
                             Each node in the graph represents a destination, and each edge represents a path.
                             The algorithm finds the least costly path from a start point to each charging station in the graph (denoted by the charger symbol).
                         This was a collaborative project with GitHub user <a href="https://github.com/ellieInfinity">ellieinfinity</a> as the other contributer.</p>
                     </div>
-                    <figure id="p3_interface">
-                        <img src="../images/p3-interface.png">
-                        <figcaption>The user interface for entering a starting location (node) and displaying the shortest path.</figcaption>
+                    <figure class="image_container">
+                        <img src="../images/path-finder-interface.png">  
                     </figure>
-                    <figure id="p3_data">
-                        <img src="../images/p3-data.png">
-                        <figcaption>The graph data structure.</figcaption>
+                    <figure class="image_container">
+                        <img src="../images/path-finder-data.png">
                     </figure>
                 </section>
             </article>
