Write form instructions CSS for contact.html

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -33,36 +33,36 @@
                 </nav>
             </header>
             <article>
-                <section>
+                <div id="contact_instructions">
                     <p>Comments, inquiries, or suggestions? Use the following form to submit them to me. 
-                        On submit, your default email client should open with a prepared email.</p>
-                </section>
-                <form id="form" action="mailto:arvin.ziba@ontariotechu.net" method="post" enctype="text/plain" name="form">
-                    <div id="first_name_div">
+                        On submit, your default email client should open with a prepared email. Thank you!</p>
+                </div>
+                <form action="mailto:arvin.ziba@ontariotechu.net" method="post" enctype="text/plain" name="form">
+                    <div class="form_prompt">
                         <label for="first_name">First Name</label>
                         <br>
                         <input type="text" name="first_name" size="32" placeholder="First Name">
                     </div>
                     
-                    <div id="surname_div">
+                    <div class="form_prompt">
                         <label id="surname">Surname</label>
                         <br>
                         <input type="text" name="surname" size="32" placeholder="Surname">
                     </div>
 
-                    <div id="email_div"></div>
+                    <div class="form_prompt">
                         <label id="surname">Email</label>
                         <br>
                         <input type="email" name="email" size="48" placeholder="Email" required>
                     </div>
 
-                    <div id="comments_div">
+                    <div class="form_prompt">
                         <label for="comments">Comments</label>
                         <br>
                         <textarea name="comments" cols="60" rows="5" maxlength="300" placeholder="Questions, Inquiries, Suggestions etc." required></textarea>
                     </div>
 
-                    <div id="how_find_me_div">
+                    <div class="form_prompt">
                         <label for="how_find_me">How did you find this website?</label> 
                         <select name="how_find_me" required>
                             <option value="Search Engine">Search engine</option>
@@ -74,13 +74,15 @@
                         </select>
                     </div>
                     <br>
-                    <div id="specify_div">
+                    <div class="form_prompt">
                         <label for="specify">If you selected "Other", please specify how.</label>
                         <input type="text" name="specify" size="32">
                     </div>
                     <br>
-                    <input type="submit" value="Submit">
-                    <input type="reset" value="Reset">
+                    <div id="form_buttons">
+                        <input type="submit" value="Submit">
+                        <input type="reset" value="Reset">
+                    </div>
                 </form>
             </article>
             <footer>
